<resources>
    <string name="app_name">DndTimer</string>
    <string name="btn_start">Start Game</string>
    <string name="btn_add">Add Player</string>
    <string name="hint_init">Initiative</string>
    <string name="hint_name">Player Name</string>
    <string name="text_player_name">Player Name</string>
    <string name="text_initiative">Initiative</string>
    <!--Timer Layout Strings-->
    <string name="btn_start_timer">Start</string>
    <string name="btn_pause_timer">Pause</string>
    <string name="btn_resume_timer">Resume</string>
    <string name="btn_next_player">Next Player</string>
    <string name="btn_player_died">Player Died</string>
    <string name="text_player_list">Player List: </string>
    <string name="text_graveyard_list">Graveyard: </string>
    <string name="text_initial_time">1:00</string>
    <!--Options Strings-->
    <string name="btn_start_new">Start New Game</string>
    <string name="btn_resume_saved">Resume Saved Game</string>
    <!--Actionbar Strings-->
    <string name="btn_settings">Settings</string>
    <string name="btn_save">Save Changes</string>
</resources>
