<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/add_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/btn_add"
                    android:layout_toLeftOf="@id/btn_add"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="10dp"
                    android:inputType="text"
                    android:hint="@string/hint_name"/>

                <EditText
                    android:id="@+id/edit_init"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_name"
                    android:layout_toStartOf="@id/btn_add"
                    android:layout_toLeftOf="@id/btn_add"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="10dp"
                    android:inputType="number"
                    android:hint="@string/hint_init"/>

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/btn_add"/>

            </RelativeLayout>

            <ListView
                android:id="@+id/player_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:text="@string/btn_start"/>

</LinearLayout>
